# cpp_unique_function

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  LibstraConfig.cmake  README.md  foo.cpp  main.cpp  unique_function.hpp
include/libstra/: barrier.hpp  expected.hpp  iterators.hpp  latch.hpp  memory.hpp  range.hpp  ranges.hpp  semaphore.hpp  static_vector.hpp  storage.hpp  thread_pool.hpp  unique_function.hpp  utility.hpp  views.hpp
include/libstra/internal/: attrib_macros.h  config.h
src/: latch.cpp  semaphore.cpp  thread_pool.cpp
tests/: barrier.cpp  expected.cpp  iterators.cpp  latch.cpp  memory.cpp  ranges.cpp  semaphore.cpp  static_vector.cpp  storage.cpp  thread_pool.cpp  unique_function.cpp  utils.cpp  views.cpp
